# microscopy_sdl

./: .env.example  README.md  data.settings.yaml  devbox.json  event.settings.yaml  experiment.settings.yaml  lab.settings.yaml  location.settings.yaml  pyproject.toml  resource.settings.yaml  workcell.settings.yaml
docker/: infra.compose.yaml  managers.compose.yaml  nodes.compose.yaml
nodes/camera_1/: settings.yaml
nodes/gamma/: settings.yaml
nodes/ot2_beta.node/: settings.yaml
nodes/pf400/: settings.yaml
